--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,21 @@
 layout: default
 title: My Resume
 ---
+{% assign profile = site.data.data.profile %}
+{% if profile %}
+<section class="career-profile">
+    <h2 class="title">Career Profile</h2>
+    <div class="details">{{profile}}</div>
+</section>
+{% endif %}
 
+<div class="header">
+    <h1 class="title">{{site.data.data.name}}</h1>
+    {% if site.data.data.support_dark_mode%}
+      <input type="checkbox" id="switch" name="mode" class="toggle-dark"></input>
+      <label for="switch"><i id="moon" data-feather="moon" fill="var(--fg-color)"></i></label>
+    {%endif%}
+  </div>
 
     <article class="resume-wrapper text-center position-relative">
 	    <div class="resume-wrapper-inner mx-auto text-start bg-white shadow-lg">
@@ -14,7 +28,7 @@ title: My Resume
 				    <div class="col">
 					    <div class="row p-4 justify-content-center justify-content-md-between">
 						    <div class="primary-info col-auto">
-							    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Steve Doe</h1>
+							    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">{{site.data.data.name}}</h1>
 							    <div class="title mb-3">Full Stack Developer</div>
 							    <ul class="list-unstyled">
 								    <li class="mb-2"><a class="text-link" href="#"><i class="far fa-envelope fa-fw me-2" data-fa-transform="grow-3"></i>Steve.Doe@website.com</a></li>
